--- a/UploadImageWebsite/Properties/launchSettings.json
+++ b/UploadImageWebsite/Properties/launchSettings.json
@@ -14,9 +14,10 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7223;http://localhost:5109",
+      "applicationUrl": "https://0.0.0.0:7223;http://0.0.0.0:5109",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "PORT": "7223"
       }
     },
     "IIS Express": {
